# agentscope

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  agentscope_search_spec.md  docker-compose.yml  package-lock.json
.github/workflows/: workflow.yml
apps/: agentscope_bootstrap.py
apps/api/: Dockerfile
apps/api/api/: Cargo.toml
apps/api/api/src/: auth.rs  events.rs  lib.rs  main.rs  swagger.rs
apps/api/api/src/analysis/: classifiers.rs  detectors.rs  insights_engine.rs  llm_explanations.rs  mod.rs  pricing.rs  rca_engine.rs  run_compare.rs  run_insights_engine.rs  trend_analysis.rs
apps/api/api/src/auth/: api_key.rs  oidc.rs  permissions.rs
apps/api/api/src/demo/: loader.rs  mod.rs  replay.rs
apps/api/api/src/engine/replay/: mod.rs  replay_engine.rs  step_controller.rs
apps/api/api/src/limits/: mod.rs
apps/api/api/src/routes/: demo.rs  mod.rs  sandbox.rs
apps/api/api/tests/: analysis_integration.rs  auth_integration.rs  compare_integration.rs  events_integration.rs  ingest_integration.rs  ingest_test.rs  replay_integration.rs  support.rs
apps/api/storage/: Cargo.toml
apps/api/workers/: Cargo.toml
apps/api/workers/src/: alert_monitor.rs  finalize_run.rs  main.rs  prompt_analyzer.rs  rca_analyzer.rs  usage_aggregator.rs
apps/llm-proxy/: Cargo.toml
apps/llm-proxy/src/: main.rs  models.rs  proxy.rs  telemetry.rs
apps/web/: README.md  middleware.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: agent-scope-landing.tsx  alerts-topbar.tsx  app-shell.tsx  artifact-search-panel.tsx  artifact-viewer.tsx  dashboard-view.tsx  demo-scenarios.tsx  insights-panel.tsx  live-log-panel.tsx  login-form.tsx  marketing-shell.tsx  mock-trace-data.ts  onboarding-api-key.tsx  onboarding-first-run.tsx  onboarding-sdk-tabs.tsx  onboarding-welcome.tsx  prompt-viewer.tsx  rca-panel.tsx  recording-mode-controller.tsx  replay-panel.tsx  root-cause-panel.tsx  run-compare-selector.tsx  run-compare-view.tsx  run-detail-view.tsx  run-summary.tsx  run-table.tsx  runs-auto-refresh.tsx  runs-screen.tsx  sidebar.tsx  span-detail.tsx  span-details-panel.tsx  span-tree.tsx  system-flow-animation.tsx  token-summary.tsx  trace-view.tsx  workflow-graph.tsx
apps/web/lib/: api.ts  run-detail-store.ts  run-version.ts  server-api.ts  use-run-stream.ts
apps/web/scripts/: product-tour-playwright.mjs
docker/: api.Dockerfile  docker-compose.yml
docs/: architecture.md  engine-spec.md  telemetry-spec.md
docs/graphics/agentscope/: README.md
engine/api/: Cargo.toml
engine/api/src/: lib.rs
engine/api/tests/: ingest_integration.rs  ingest_test.rs
engine/common/: Cargo.toml
engine/common/src/: config.rs
engine/storage/: Cargo.toml
engine/storage/migrations/: 0001_init.sql  0004_run_insights.sql
engine/storage/src/: artifacts.rs  lib.rs  postgres.rs  root_causes.rs  runs.rs  spans.rs
engine/trace/: Cargo.toml
engine/trace/src/: artifact.rs  error.rs  metrics.rs  mod.rs  run.rs  run_root_cause.rs  span.rs
engine/workers/: Cargo.toml
engine/workers/src/: cost_calc.rs  finalize_run.rs  main.rs
examples/coding-agent/: README.md  run_agent.py
examples/coding-agent/workspace/: notes.txt  summary.txt
examples/demo/: README.md  run_demo.sh  sample_trace.json  send_trace.py  verify_trace.sh
examples/demo-agent/: run_demo.sh  send_trace.py  verify_trace.sh
examples/demo_traces/: broken_agent_demo.json  multi_agent_demo.json  real_agent_demo.json  sandbox_broken_agent.json  sandbox_multi_agent.json  sandbox_real_agent.json
examples/sandbox/: README.md
examples/sandbox/python-agent/: broken_scenario.py  main.py  multi_agent.py  real_agent.py  tools.py
examples/sandbox/sample_project/: buggy.py  buggy.python.fixed.ts  buggy.rs  buggy.ts  (+2 more)
scripts/: README.md
(+80 files in other folders)
