[package]
name = "agentscope-llm-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
tokio-stream = "0.1"
