[package]
name = "agentscope-api"
version = "0.1.0"
edition = "2021"

[dependencies]
agentscope-common = { path = "../common" }
agentscope-storage = { path = "../storage" }
agentscope-trace = { path = "../trace" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { workspace = true }
tower = "0.5"
uuid = { workspace = true }
