[package]
name = "agentscope-api"
version = "0.1.0"
edition = "2021"

[dependencies]
agentscope-common = { path = "../common" }
agentscope-storage = { path = "../storage" }
agentscope-trace = { path = "../trace" }
axum = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1"

[dev-dependencies]
chrono = { workspace = true }
http-body-util = "0.1"
sqlx = { workspace = true }
uuid = { workspace = true }
