[package]
name = "agentscope-workers"
version = "0.1.0"
edition = "2021"

[dependencies]
agentscope-api = { path = "../api" }
agentscope-common = { path = "../common" }
agentscope-storage = { path = "../storage" }
agentscope-trace = { path = "../trace" }
chrono = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
